k8s-manifests/gateway/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: canary-route
  labels:
    app: canary-nginx
spec:
  parentRefs:
    - name: main-envoy-gateway
      namespace: envoy-gateway-system
  hostnames:
    - "canary.example.com"
  rules:
    - backendRefs:
        - name: nginx-stable-svc
          port: 80
          weight: 60
        - name: nginx-canary-svc
          port: 80
          weight: 40
